<resources>
    <string name="app_name">Easy Walk-In</string>
    <string name="LogInScreen_WelcomeMsg">Log in to Easy Walk-In</string>
    <string name="LogInScreen_NewUserMsg">New to Easy Walk-In? Sign up.</string>
    <string name="LogIn">Log in</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="UsernameOrEmail">Username (Email)</string>
    <string name="SignUpScreen_WelcomeMsg">Create a new account</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="EmailAddress">Email Address</string>
    <string name="Email_is_username">Email Address (will be your username)</string>
    <string name="HomeAddress">Home Address</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="SignUp">Sign up</string>
    <string name="SignUpScreen_PreviousUserMsg">Already have an account? Log in.</string>
    <string name="Password_with_restrictions">Password (6 to 12 characters)</string>
    <string name="Password_case_sensitive">Password (case sensitive)</string>
    <string name="SignUpScreen_account_type_prompt">Select an account type</string>
    <string name="AccountType">Type of account</string>
    <string name="PersonalProfile">Personal Profile</string>
    <string name="Profile_AccountDescription">Type of account:</string>
    <string name="LogOut">Log out</string>
    <string name="Go_To_Account">Go to Account</string>
    <string name="Admin_Account">Admin Account</string>
    <string name="Employee_Account">Employee Account</string>
    <string name="Patient_Account">Patient Account</string>
    <string name="Manage_Services">Manage Services</string>
    <string name="Manage_Employees">Manage Employees</string>
    <string name="Manage_Patients">Manage Patients</string>
    <string name="Go_To_Profile">Return to Personal Profile</string>
    <string name="Add_new_service">Create new Service</string>
    <string name="Update_Service">Update Service</string>
    <string name="Edit_Service">Edit Service</string>
    <string name="Service_name">Name of Service</string>
    <string name="Provider_type">Type of Provider</string>
    <string name="Doctor">Doctor</string>
    <string name="Nurse">Nurse</string>
    <string name="Staff">Staff</string>
    <string name="Service_Description">Description (optional)</string>
    <string name="Service_Description_Hint">Description (max 100 characters)</string>
    <string name="Create_service">Create Service</string>
    <string name="Cancel">Cancel</string>
    <string name="Update">Update</string>
    <string name="Delete_Service">Delete Service</string>
    <string name="Available_Services">List of available services:</string>
    <string name="Patient_List">List of Patients:</string>
    <string name="Employee_List">List of Employees:</string>
    <string name="Edit">Edit</string>
    <string name="Refresh">Refresh</string>
    <string name="Delete">Delete</string>
    <string name="Select">Select</string>
    <string name="Join">Join</string>
    <string name="Create_Join_Clinic_Msg">There is no clinic associated to your account. Please create a new clinic or join an existing one.</string>
    <string name="Create_clinic">Create new clinic</string>
    <string name="Join_Clinic">Join this clinic</string>
    <string name="Search_Clinic_To_Join_Msg">To join an existing clinic, please enter its name below.</string>
    <string name="ClinicName">Clinic name</string>
    <string name="Clinic_Info">Clinic information</string>
    <string name="No_clinic_msg">There is no clinic associated to your account. Click here to create a new clinic or join an existing one.</string>
    <string name="Hours_of_operation">Hours of operation</string>
    <string name="Working_Hours_Dialog_Instructions">Enter the open hours in the 24 hour clock format hh:mm (e.g. 08:30, 16:00). If the clinic is closed on a certain day, simply leave both fields blank.</string>
    <string name="To">to</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="Closed">Closed</string>
    <string name="Services_offered">Services offered</string>
    <string name="Add_service">Add Service</string>
    <string name="Create_new_clinic_msg">To create a new clinic, please enter the clinic information below. Required fields are marked with an asterisk (*).</string>
    <string name="ClinicName_star">Clinic name *</string>
    <string name="Phone_star">Phone number *</string>
    <string name="Phone_prompt">888 888 8888</string>
    <string name="Street_Address_star">Address line 1 *</string>
    <string name="Street_Address_hint">e.g. 123 Main St</string>
    <string name="Clinic_unit">Unit/room number</string>
    <string name="Clinic_unit_hint">e.g. C302</string>
    <string name="Clinic_province_star">Province code *</string>
    <string name="Clinic_province_code">Province code</string>
    <string name="Clinic_province_hint">e.g. ON</string>
    <string name="Clinic_city_star">City *</string>
    <string name="Clinic_city_hint">City name</string>
    <string name="Clinic_postal_code_star">Postal code *</string>
    <string name="Clinic_postal_code_hint">e.g. J1K 3N9</string>
    <string name="Clinic_insurance_star">Accepted insurance types (separated by commas) *</string>
    <string name="Clinic_insurance_hint">e.g. RAMQ, OHIP</string>
    <string name="Clinic_payment_star">Accepted payment methods (separated by commas) *</string>
    <string name="Clinic_payment_hint">e.g. Debit, Credit, Cash</string>
    <string name="Password_with_restrictions_star">Password (6 to 12 characters) *</string>
    <string name="Time_format">00:00</string>
    <string name="Remote_check_in">Remote Check-In</string>
    <string name="Remote_check_in_to_clinic">Remote check-in to this clinic</string>
    <string name="Scheduled_appointments">Scheduled Appointments</string>
    <string name="New_appointment">Schedule a new appointment</string>
    <string name="Schedule_appointment_at_clinic">Schedule a new appointment at this clinic</string>
    <string name="Expected_wait">Your expected waiting time is:</string>
    <string name="Current_expected_waiting_time">Expected waiting time:</string>
    <string name="Not_on_Waiting_List">You are not currently on the waiting list\n of any clinic.</string>
    <string name="On_Waiting_List">You are currently on the waiting list\n of the following clinic.</string>
    <string name="Clinic_info">Clinic Info</string>
    <string name="Clinic_search">Search for a clinic</string>
    <string name="ClinicSearch">Clinic Search</string>
    <string name="Clinic_search_by_location">Search for clinic by location</string>
    <string name="Clinic_search_by_service">Search for clinics offering this service</string>
    <string name="Clinic_search_currently_open">Search for currently open clinics</string>
    <string name="New_Search">New Search</string>
    <string-array name="account_type_array">
        <item>Patient</item>
        <item>Employee</item>
    </string-array>
</resources>
